--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -1,10 +1,27 @@
-#NotBlank.restaurante.nome=Nome do Restaurante é obrigatório
-#NotBlank.cozinha.nome=Nome da Cozinha é obrigatório
-
 NotBlank = {0} é obrigatório
+NotNull={0} é obrigatório
+#PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
-#NotBlank.nome=Informe um nome, porque é obrigatório
+#Cozinha
+cozinha.nome=Nome da Cozinha
+cozinha.id=Código da cozinha
 
-nome=Nome
+#Restaurante
+NotNull.restaurante.taxaFrete={0} é obrigatória
+NotNull.restaurante.cozinha={0} é obrigatória
 restaurante.nome=Nome do restaurante
+restaurante.cozinha=Cozinha do restaurante
+restaurante.taxaFrete=Taxa de frete do restaurante
+
+
+TaxaFrete.invalida={0} está inválido
+
+
+# Estado
+estado.nome=Nome do estado
+estado.id=Código do estado
+
+# Cidade
+cidade.nome=Nome da cidade
+cidade.estado=Estado da cidade
 
