validação em nível de classe

--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -1,6 +1,8 @@
 NotBlank = {0} é obrigatório
 NotNull={0} é obrigatório
-#PositiveOrZero={0} deve ser um valor maior ou igual a zero
+PositiveOrZero={0} deve ser um valor maior ou igual a zero
+
+
 
 #Cozinha
 cozinha.nome=Nome da Cozinha
@@ -14,7 +16,7 @@ restaurante.cozinha=Cozinha do restaurante
 restaurante.taxaFrete=Taxa de frete do restaurante
 
 
-TaxaFrete.invalida={0} está inválido
+
 
 
 # Estado
@@ -25,3 +27,9 @@ estado.id=Código do estado
 cidade.nome=Nome da cidade
 cidade.estado=Estado da cidade
 
+
+
+Multipo={0} Deve ser um valor múltiplo de {1}
+ValorZeroIncluiDescricao={1} deve conter {2} 
+#javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
+#TaxaFrete.invalida=Taxa frete está inválida, informe um valor positivo
