--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -15,7 +15,9 @@ restauranteInput.nome=Nome do restaurante
 restauranteInput.cozinha=Cozinha do restaurante
 restauranteInput.taxaFrete=Taxa de frete do restaurante
 
-
+NotBlank.formaPagamentoInput.descricao={0} é obrigatória
+formaPagamentoInput.id=Código da forma de pagamento
+formaPagamentoInput.descricao=Descrição da forma de pagamento
 
 
 
