Refatorando serviço de cadastro de restaurante para incluir endereço

--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ restauranteInput.nome=Nome do restaurante
 restauranteInput.cozinha=Cozinha do restaurante
 restauranteInput.taxaFrete=Taxa de frete do restaurante
 
+#Forma de pagamento
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 formaPagamentoInput.id=Código da forma de pagamento
 formaPagamentoInput.descricao=Descrição da forma de pagamento
@@ -29,6 +30,14 @@ estadoInput.nome=Nome do estado
 cidadeInput.nome=Nome da cidade
 cidadeInput.estado=Estado da cidade
 
+#Endereco
+endereco=Endereço
+endereco.logradouro=Logradouro
+endereco.numero=Número do logradouro
+endereco.cidade=Cidade
+endereco.cidade.id=Código da cidade
+endereco.cep=CEP
+endereco.bairro=Bairro
 
 
 Multipo={0} Deve ser um valor múltiplo de {1}
