--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -42,6 +42,21 @@ endereco.bairro=Bairro
 #Grupo
 grupoInput.nome=Nome do grupo
 
+#Usuario
+NotBlank.usuarioComSenhaInput.senha={0} é obrigatória
+usuarioComSenhaInput.nome=Nome do usuário
+usuarioComSenhaInput.email=E-mail do usuário
+usuarioComSenhaInput.senha=Senha do usuário
+
+NotBlank.usuarioInput.senha={0} é obrigatória
+usuarioInput.nome=Nome do usuário
+usuarioInput.email=E-mail do usuário
+
+NotBlank.senhaInput.senhaAtual={0} é obrigatória
+NotBlank.senhaInput.novaSenha={0} é obrigatória
+senhaInput.senhaAtual=Senha atual
+senhaInput.novaSenha=Nova senha
+
 Multipo={0} Deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2} 
 #javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
