implementando os endpoints de produtos

--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -21,7 +21,6 @@ formaPagamentoInput.id=Código da forma de pagamento
 formaPagamentoInput.descricao=Descrição da forma de pagamento
 
 
-
 # Estado
 estadoInput.id=Código do estado
 estadoInput.nome=Nome do estado
@@ -56,6 +55,12 @@ NotBlank.senhaInput.senhaAtual={0} é obrigatória
 NotBlank.senhaInput.novaSenha={0} é obrigatória
 senhaInput.senhaAtual=Senha atual
 senhaInput.novaSenha=Nova senha
+
+#Produto
+produtoInput.nome=Nome do produto
+produtoInput.descricao=Descrição do produto
+produtoInput.preco=Preço do produto
+produtoInput.ativo=Status do produto
 
 Multipo={0} Deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2} 
