--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -1,8 +1,10 @@
 NotBlank = {0} é obrigatório
 NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
-
-
+Multipo={0} Deve ser um valor múltiplo de {1}
+ValorZeroIncluiDescricao={1} deve conter {2}
+typeMismatch.java.time.OffsetDateTime={0} deve ser uma data/hora válida 
+typeMismatch.java.lang.Long={0} deve ser um número válido
 
 #Cozinha
 cozinhaInput.id=Código da cozinha
@@ -80,7 +82,15 @@ enderecoEntrega.bairro=Bairro do endereço de entrega
 restaurante.id=Código do restaurante
 formaPagamento.id=Código da forma de pagamento
 
-Multipo={0} Deve ser um valor múltiplo de {1}
-ValorZeroIncluiDescricao={1} deve conter {2} 
+# Pedido Filter
+pedidoFilter.dataCriacaoInicio=Data inicial de criação do pedido
+pedidoFilter.dataCriacaoFim=Data final de criação do pedido
+pedidoFilter.clienteId=Código do cliente
+pedidoFilter.restauranteId=Código do restaurante
+
+
+
+
+ 
 #javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
 #TaxaFrete.invalida=Taxa frete está inválida, informe um valor positivo
