adicionando os filtros na consulta de vendas diárias

--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -88,7 +88,10 @@ pedidoFilter.dataCriacaoFim=Data final de criação do pedido
 pedidoFilter.clienteId=Código do cliente
 pedidoFilter.restauranteId=Código do restaurante
 
-
+#Venda diaria filter
+vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação de pedido
+vendaDiariaFilter.dataCriacaoFim=Data final de criação de pedido
+vendaDiariaFilter.restauranteId=Código do restaurante 
 
 
  
