--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -93,6 +93,11 @@ vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação de pedido
 vendaDiariaFilter.dataCriacaoFim=Data final de criação de pedido
 vendaDiariaFilter.restauranteId=Código do restaurante 
 
+# Foto Produto
+
+fotoProdutoInput.arquivo=Arquivo da foto
+fotoProdutoInput.descricao=Descrição da foto
+FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho máximo de {1}
 
  
 #javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
