--- a/algafood-api/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/algafood-api/src/main/resources/messages.properties
@@ -98,7 +98,7 @@ vendaDiariaFilter.restauranteId=Código do restaurante
 fotoProdutoInput.arquivo=Arquivo da foto
 fotoProdutoInput.descricao=Descrição da foto
 FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho máximo de {1}
-
+FileContentType.fotoProdutoInput.arquivo=A foto deve ser do tipo JPG ou PNG
  
 #javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
 #TaxaFrete.invalida=Taxa frete está inválida, informe um valor positivo
