--- a/algafood-api/src/main/resources/messages.properties
+++ b/algafood-api/src/main/resources/messages.properties
@@ -83,3 +83,7 @@ FileSize.fotoProdutoInput.arquivo=A foto deve ter um tamanho máximo de {1}
 FileContentType.fotoProdutoInput.arquivo=A foto deve ser do tipo JPG ou PNG
 #javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
 #TaxaFrete.invalida=Taxa frete está inválida, informe um valor positivo
+
+
+scope.READ=Acesso de leitura
+scope.WRITE=Acesso de escrita
